# stock

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
scripts/: fetch_all.py  fetch_limit_up.py  init_db.py  init_industry.py  scheduler.py
src/stock/: config.py  constants.py  llm.py  models.py
src/stock/alert/: __init__.py
src/stock/analysis/: ai_news.py  ai_report.py  industry.py  market.py  nl_screener.py  report_agent.py
src/stock/analysis/fundamental/: __init__.py  financial.py  screener.py
src/stock/analysis/technical/: __init__.py  oscillator.py  pattern.py  trend.py  volume.py
src/stock/data/: __init__.py  akshare_provider.py  baostock_provider.py  news.py  provider.py  schema.py  storage.py
src/stock/risk/: __init__.py
src/stock/strategy/: __init__.py  backtest.py  base.py  metrics.py
src/stock/strategy/templates/: __init__.py  boll_breakout.py  kdj_rsi.py  ma_cross.py  macd_strategy.py
src/stock/web/: app.py
src/stock/web/pages/: 1_stock_detail.py  2_market_overview.py  3_screener.py  4_strategy_lab.py  5_portfolio.py  6_alerts.py  7_industry.py  8_limit_up.py
tests/: test_strategy.py  test_technical.py
