[project]
name = "stock"
version = "0.1.0"
description = "A股综合分析平台"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b1",
    "plotly>=5.24.0",
    "mplfinance>=0.12.9",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
backtest = [
    "vectorbt>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
